--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,29 +7,28 @@ pg:
     POSTGRES_USER       : postgres
     POSTGRES_PASSWORD   : postgres
 
-nombre_proyecto:
+<NOMBRE PROYECTO>:
   image: siutoba/docker-toba
-  container_name: nombre_proyecto
+  container_name: <NOMBRE PROYECTO>
   ports:
    - "7008:80"
   environment:
-    DOCKER_NAME                       : nombre_proyecto
+    DOCKER_NAME                       : <NOMBRE PROYECTO>
     DOCKER_WEB_PORT                   : 7008
     TOBA_PASS                         : toba
     TOBA_BASE_PASS                    : postgres
-    TOBA_DIR                          : /var/local/nombre_proyecto/vendor/siu-toba/framework
-    TOBA_INSTALACION_DIR              : /var/local/docker-data/nombre_proyecto-instalacion
+    TOBA_DIR                          : /var/local/<NOMBRE PROYECTO>/vendor/siu-toba/framework
+    TOBA_INSTALACION_DIR              : /var/local/docker-data/<NOMBRE PROYECTO>-instalacion
     TOBA_BASE_HOST                    : pg
-    TOBA_BASE_NOMBRE                  : toba_nombre_proyecto
-    TOBA_PROYECTO                     : nombre_proyecto
-    TOBA_PROYECTO_DIR                 : /var/local/nombre_proyecto
-    TOBA_PROYECTO_ALIAS               : /nombre_proyecto
+    TOBA_BASE_NOMBRE                  : toba_<NOMBRE PROYECTO>
+    TOBA_PROYECTO                     : <NOMBRE PROYECTO>
+    TOBA_PROYECTO_DIR                 : /var/local/<NOMBRE PROYECTO>
+    TOBA_PROYECTO_ALIAS               : /<NOMBRE PROYECTO>
     TOBA_PROYECTO_INSTALAR            : "True"
-#    TOBA_PROYECTO_INSTALAR_PARAMETROS : --base-nombre mapuche
     TOBA_INSTALAR_REFERENCIA          : "True"
     TOBA_INSTALAR_USUARIOS            : "True"
   links:
    - pg
   volumes:
-   - .:/var/local/nombre_proyecto
-   - ./instalacion:/var/local/docker-data/nombre_proyecto-instalacion
+   - .:/var/local/<NOMBRE PROYECTO>
+   - ./instalacion:/var/local/docker-data/<NOMBRE PROYECTO>-instalacion
