* Agrego lanzamiento de scripts  * Actualizo README.md

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,14 @@
   "require": {
     "siu-toba/framework": "^3.0"    
   },
+  "scripts": {
+     "post-install-cmd": [
+           "composer run-script post-install-cmd -d ./vendor/siu-toba/framework/"
+     ],
+     "post-update-cmd": [
+            "composer run-script post-install-cmd -d ./vendor/siu-toba/framework/"
+     ]
+  },
   "minimum-stability": "dev",
   "prefer-stable": true
 }
