- Agrega configuracion para bin-dir y remueve scripts que se enlazan al instalar via composer

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
   "require": {
     "siu-toba/framework": "^3.0"    
   },
+  "config": {
+     "bin-dir": "./bin" 
+  }
   "scripts": {
      "post-install-cmd": [
            "composer run-script post-install-cmd -d ./vendor/siu-toba/framework/"
