--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     }
   ],
   "require": {
-    "siu-toba/framework": "^3.1"    
+    "siu-toba/framework": "~3.3"
   },
   "config": {
      "bin-dir": "./bin" 
