Excluye paquetes especificos por modificacion en composer 2.0

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   "repositories": [
     {
       "type": "composer",
-      "url": "https://satis.siu.edu.ar"
+      "url": "https://satis.siu.edu.ar",
+      "exclude": ["siu-toba/framework", "siu-toba/rest"]
     }
   ],
   "require": {
