--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 pg:
-  image: postgres:11
+  image: postgres:12
   ports:
    - "7432:5432"
   container_name: pg
@@ -8,7 +8,7 @@ pg:
     POSTGRES_PASSWORD   : postgres
 
 <NOMBRE PROYECTO>:
-  image: siutoba/docker-toba
+  image: siudocker/php:7.4-web-v0.9.0
   container_name: <NOMBRE PROYECTO>
   ports:
    - "7008:80"
@@ -17,7 +17,6 @@ pg:
     DOCKER_WEB_PORT                   : 7008
     TOBA_PASS                         : toba
     TOBA_BASE_PASS                    : postgres
-    TOBA_DIR                          : /var/local/<NOMBRE PROYECTO>/vendor/siu-toba/framework
     TOBA_INSTALACION_DIR              : /var/local/docker-data/<NOMBRE PROYECTO>-instalacion
     TOBA_BASE_HOST                    : pg
     TOBA_BASE_NOMBRE                  : toba_<NOMBRE PROYECTO>
