--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,7 @@
-pg:
+version: '3.7'
+
+services:
+ pg:
   image: postgres:12
   ports:
    - "7432:5432"
@@ -7,7 +10,7 @@ pg:
     POSTGRES_USER       : postgres
     POSTGRES_PASSWORD   : postgres
 
-<NOMBRE PROYECTO>:
+ <NOMBRE PROYECTO>:
   image: siudocker/php:7.4-web-v0.9.0
   container_name: <NOMBRE PROYECTO>
   ports:
