Actualiza img base y agrega comentarios

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,7 @@ ARG APP
 ARG COMPOSER_CACHE_DIR=../composer-cache
 
 # stage base
-FROM siudocker/php:8.1-cli-v1.0.2 as base
+FROM siudocker/php:8.1-cli-v1.0.3 as base
 
 RUN apk --no-cache add \
     git yarn php81-xmlreader
@@ -23,13 +23,16 @@ RUN echo "composer optimizado" \
 ########################################################################################################################
 FROM base as src-<PROYECTO>
 
+# Copiamos el dir docker para que otros puedan entender la construcción de la imagen
 COPY docker /usr/local/build/docker
 
+# Copiamos los archivos necesarios para bajar las dependencias en modo prod
 COPY ./composer.json /usr/local/build/<PROYECTO>/composer.json
 COPY ./composer.lock /usr/local/build/<PROYECTO>/composer.lock
 
-RUN composer install -d ./<PROYECTO> --no-dev --ignore-platform-reqs --prefer-dist --no-progress -n --no-autoloader --no-scripts
+RUN composer install -d ./<PROYECTO> --no-dev --prefer-dist --no-progress -n --no-autoloader --no-scripts
 
+# Copiamos el resto del codigo del proyecto
 COPY <PROYECTO> /usr/local/build/<PROYECTO>
 
 RUN echo "composer autoload" \
@@ -37,12 +40,14 @@ RUN echo "composer autoload" \
     && composer dump-autoload -d ./<PROYECTO> --apcu \
     && composer run-script post-install-cmd -d ./<PROYECTO>
 
+# Copiamos los templates de la carpeta de instalacion sobre la que impactaran las env-vars
 RUN echo "preparar el proyecto" \
     && cp -R ./<PROYECTO>/templates/app/instalacion <PROYECTO>/instalacion \
     && cp ./<PROYECTO>/templates/app/entorno_toba.env <PROYECTO>/entorno_toba.env \
     && cp -R ./<PROYECTO>/templates/app/www <PROYECTO>/www/ \
     && echo > ./<PROYECTO>/<PROYECTO>.log
 
+# Eliminamos todo aquello que no necesitemos para bajar el tamaño de la imagen final
 RUN echo "eliminar archivos innecesarios para alivianar la imagen" \
     && rm -R ./<PROYECTO>/vendor/siu-toba/framework/proyectos \
     && rm -R ./<PROYECTO>/vendor/siu-toba/framework/php/modelo/ddl/mysql \
@@ -57,8 +62,9 @@ RUN echo "eliminar archivos innecesarios para alivianar la imagen" \
 ########################################################################################################################
 # stage DEVELOP (final)                                                                                                    #
 ########################################################################################################################
-FROM siudocker/php:8.1-web-v1.0.2 as dev
+FROM siudocker/php:8.1-web-v1.0.3 as dev
 
+# Copiamos lo que se bajo, aunque seguramente luego sera reemplazado con un volumen
 COPY --from=src-<PROYECTO> --chown=apache:apache /usr/local/build /usr/local/app
 
 RUN echo "ajustes de apache" \
@@ -69,11 +75,12 @@ RUN rm -Rf composer-cache
 ########################################################################################################################
 # stage PROD (final)
 ########################################################################################################################
-FROM siudocker/php:8.0-web-rootless-v1.0.2 as prod
+FROM siudocker/php:8.1-web-rootless-v1.0.3 as prod
 
 USER root
 
-COPY --from=src-<PROYECTO> --chown=apache:apache /usr/local/build /usr/local/app
+# Copiamos todo el codigo de la aplicacion (dependencias incluidas) que se ejecutaran finalmente
+COPY --from=src-<PROYECTO> --chown=siu:0 /usr/local/build /usr/local/app
 
 ## Ventana para incorporar librerias o extensiones faltantes, solo agregar indispensables
 RUN apk --no-cache add -U openssl 
@@ -83,6 +90,7 @@ RUN echo "ajustes de apache" \
 
 RUN rm -Rf composer-cache
 
+# Definimos env-vars minimas y dropeamos el usuario de ejecucion a uno con menos permisos
 ARG HOME=/usr/local/app
 ARG USER=siu
 ENV HOME=$HOME
@@ -100,4 +108,3 @@ LABEL org.opencontainers.image.authors="mail@authors.me"
 USER $USER
 
 WORKDIR /usr/local/app
- 
